- Fix: Implemented more balanced and sensible presets for default   blog.conf (Denis Benard). - Fix: added a few missing configuration directives to blog.conf (Denis   Benard). - Fix: main title for atom feeds not getting set (Denis Benard). - Fix: removed outdated use of 'align="center"' from templates (Denis   Benard). - Fix: build_entryarchives(): removed redundant call to write_template(). - Added more aesthetics to pre element styling in default CSS.

--- a/nanoblogger/default/styles/nb_clean.css
+++ b/nanoblogger/default/styles/nb_clean.css
@@ -59,9 +59,10 @@ img {
 }
 
 pre {
+	background-color:#EEE;
 	padding:2mm;
+	border-top:1px solid #999;
 	border-left:1px solid #999;
-	border-bottom:1px solid #999;
 }
 
 #banner {
