--- a/nanoblogger/default/styles/nb_default.css
+++ b/nanoblogger/default/styles/nb_default.css
@@ -56,9 +56,10 @@ blockquote {
 }
 
 pre {
+	background-color:#EEE;
 	padding:2mm;
+	border-top:1px solid #999;
 	border-left:1px solid #999;
-	border-bottom:1px solid #999;
 }
 
 #banner {
